<!--
  ~    Copyright (C) 2018 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">自助机</string>
    <string name="load_data">Load Data</string>

    <!--首页-->
    <string name="company_name">携住科技</string>

    <string name="getCard">获取房卡</string>
    <string name="room_reservation">自助订房</string>
    <string name="stay_in">客房续住</string>
    <string name="check_out">办理退房</string>
    <string name="check_in">订单入住</string>
    <string name="comparison">人证比对</string>

    <!-- 订房 -->
    <string name="in_time">入住时间</string>
    <string name="out_time">离店时间</string>

    <string name="reservation_now">立即预定</string>
    <string name="num_of_people">人数</string>
    <string name="must_select">（必选*）</string>
    <string name="alert_info">注：根据《旅游业治安管理办法》规定，旅馆接待旅客住宿必须登记。</string>

    <string name="lodger">房客</string>
    <string name="deposit">押金</string>
    <string name="date">日期</string>
    <string name="pay_type">支付方式</string>
    <string name="wei_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>

    <string name="order_info">订单详情</string>
    <string name="confirm_payment">确认支付</string>

    <string name="scan_pay">扫码支付</string>
    <string name="scan_open">请打开</string>
    <string name="scan_alert">扫描下方二维码完成支付</string>

    <string name="back_launch">返回首页</string>
    <string name="pay_fail">支付失败</string>
    <string name="repay_alert">请点击重新支付获取支付二维码</string>
    <string name="repay">重新支付</string>

    <string name="pay_success_click">微信扫描对应二维码，点击“客控”按钮</string>
    <string name="pay_success_get"> 获取 本人 电子房卡</string>

    <string name="check_in_success">入住成功</string>

    <string name="checkIn_again">续住成功</string>
    <string name="ths_checkIn_again">感谢您再次入住</string>


    <string name="check_out_txt">选择房间</string>
    <string name="check_out_btn">退房</string>
    <string name="checkout_success">退房成功</string>
    <string name="checkout_alert">若有押金，将在5小时内原路返还</string>
    <string name="no_room">暂无房间</string>
    <string name="no_room_alert">您未预定房间\n如有疑问请到前台办理</string>

    <string name="confirm">确定</string>

    <string name="subscriber">预订人姓名</string>
    <string name="phone_number">手机号</string>

    <string name="internet_connect_fail">网络连接失败</string>
    <string name="connect_alert">可尝试刷新页面重新操作</string>
    <string name="reconnect">重新操作</string>


    <!-- 身份证读取-->
    <string name="id_card_reader_power_on_failed">身份证阅读机具上电失败！错误码：</string>
    <string name="id_card_reader_power_off_failed">身份证阅读机具断电失败！错误码：</string>
    <string name="idcard_sn">二代身份证阅读模块序列号：<xliff:g>%1$s</xliff:g></string>
    <string name="id_card_reader_open_failed">身份证阅读机具打开失败！错误码：</string>
    <string name="id_card_reader_open_success">身份证阅读机具打开成功！</string>
    <string name="id_card_reader_close_failed">身份证阅读机具关闭失败！错误码：</string>
    <string name="id_card_reader_close_success">身份证阅读机具关闭成功！</string>
    <string name="id_card_read_success">二代身份证读取成功！</string>
    <string name="id_card_not_exist_or_reread">请将二代身份证移开后重新放置在读卡区域！</string>
    <string name="id_card_read_failed">读卡失败！错误码：</string>
    <string name="id_card_read_id_success">读取二代证物理ID成功！物理ID：</string>
    <string name="id_card_read_id_failed">读取二代证物理ID失败！错误码：</string>
    <string name="long_term">长期</string>
    <string name="exist">存在</string>
    <string name="not_exist">不存在</string>

    <string name="id_name">入住姓名:</string>
    <string name="id_num">身份证号:</string>

    <string name="stay_comparison">验证身份</string>

    <string name="stay_alert">请将入住人身份证\n放置在自助机身份证识别区</string>

    <!-- 设置-->
    <string name="settings">设置</string>
    <string name="manager_settings">管理员设置</string>
    <string name="version_update">版本更新</string>
    <string name="check_update">检查更新</string>
    <string name="current_version">当前版本</string>
    <string name="is_newest_version">当前已是最新版本</string>
    <string name="self_help_property">自助机配置</string>
    <string name="serial_number">序列号: </string>

    <string name="configuration">配置</string>
    <string name="base_configuration">基础设置</string>
    <string name="system_configuration">系统设置</string>

    <string name="update_start_time">开始更新时间</string>
    <string name="update_end_time">结束更新时间</string>
    <string name="order_allow_check_in_time">订单允许入住时间</string>
    <string name="environment">环境</string>
    <string name="doorbell_face_entry">门铃人脸录入</string>
    <string name="face_contrast_times">人脸比对次数</string>

    <string name="save_configuration">保存配置</string>
    <string name="save">保存</string>

    <string name="send_sms">获取验证码</string>

    <string name="start_floatingBall">开启悬浮球功能</string>
</resources>
