<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/normal_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="42dp">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="@dimen/dp_67"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_40"
                android:background="@mipmap/back"
                android:gravity="center" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="126dp"
        android:text="@string/settings"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dp_50" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/dp_57">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="81dp"
                android:text="@string/manager_settings"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_35" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="1770dp"
                android:layout_height="264dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="171dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dp_72"
                android:layout_marginTop="492dp"
                android:text="@string/version_update"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_35" />

            <RelativeLayout
                android:layout_width="1770dp"
                android:layout_height="114dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="576dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_version"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_36"
                    android:textSize="30dp"

                    />

                <TextView
                    android:id="@+id/version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="213dp"
                    android:layout_centerVertical="true"
                    android:text="V3.6.1"
                    android:textSize="30dp"
                    />

                <TextView
                    android:id="@+id/version_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="366dp"
                    android:background="@color/reservation"
                    android:layout_centerVertical="true"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/is_newest_version"
                    android:textSize="30dp"
                    />

                <TextView
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1395dp"
                    android:layout_centerVertical="true"
                    android:background="@color/reservation"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:paddingLeft="90dp"
                    android:paddingRight="90dp"
                    android:text="@string/check_update"
                    android:textSize="30dp"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dp_72"
                android:layout_marginTop="744dp"
                android:text="@string/self_help_property"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_35" />

            <RelativeLayout
                android:layout_width="1770dp"
                android:layout_height="114dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="831dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configuration"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_36"
                    android:textSize="30dp"
                    />

                <Button
                    android:id="@+id/btn_base"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1038dp"
                    android:background="@color/reservation"
                    android:layout_centerVertical="true"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:paddingLeft="90dp"
                    android:paddingRight="90dp"
                    android:text="@string/base_configuration"
                    android:textSize="30dp"
                    />

                <Button
                    android:id="@+id/btn_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1395dp"
                    android:layout_centerVertical="true"
                    android:background="@color/reservation"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:paddingLeft="90dp"
                    android:paddingRight="90dp"
                    android:text="@string/system_configuration"
                    android:textSize="30dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/serial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="1023dp"
                android:text="@string/serial_number"
                android:textSize="@dimen/dp_35" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
