<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/normal_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="42dp">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="@dimen/dp_67"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_40"
                android:background="@mipmap/back"
                android:gravity="center" />
        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="126dp"
        android:text="@string/base_configuration"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dp_50" />

    <Button
        android:id="@+id/save"
        android:layout_width="@dimen/dp_280"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:background="@color/num_people_background"
        android:gravity="center"
        android:text="@string/save_configuration"
        android:textSize="@dimen/dp_35"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/save"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/dp_27">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_start_time"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="@dimen/dp_60"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_update_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="@dimen/dp_100"
                android:textSize="@dimen/dp_40"
                android:textColor="@android:color/black"
                android:text="4:00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_end_time"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="190dp"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_update_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="@dimen/dp_230"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_40"
                android:text="4:00"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_allow_check_in_time"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="320dp"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_order_allow_check_in_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="360dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_40"
                android:text="4:00"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/environment"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="450dp"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_environment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="490dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_40"
                android:text="4:00"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doorbell_face_entry"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="580dp"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_doorbell_face_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="620dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_40"
                android:text="4:00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/face_contrast_times"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="710dp"
                android:textSize="@dimen/dp_40"/>

            <EditText
                android:id="@+id/edit_face_contrast_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="750dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_40"
                android:text="4:00"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
