<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/normal_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="@dimen/dp_67"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_62"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_40"
                android:background="@mipmap/back"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="1056dp"
        android:layout_height="669dp"
        android:layout_marginStart="@dimen/dp_79"
        android:layout_marginTop="201dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout3"
        android:scaleType="fitXY"
        android:src="@mipmap/default_room"/>

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="豪华大床房"
        android:textSize="@dimen/dp_45"
        android:layout_marginStart="1213dp"
        android:layout_marginTop="167dp" />

    <TextView
        android:id="@+id/price_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="￥899 起"
        android:textSize="@dimen/dp_30"
        android:layout_marginStart="1213dp"
        android:layout_marginTop="254dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_time"
        android:textSize="@dimen/dp_30"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="395dp"
        android:textColor="@color/gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_time"
        android:textSize="@dimen/dp_30"
        android:layout_marginStart="1674dp"
        android:layout_marginTop="395dp"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginStart="1475dp"
        android:textSize="@dimen/dp_26"
        android:textColor="@color/gray"
        android:text="共三晚"
        />

    <TextView
        android:id="@+id/in_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1214dp"
        android:layout_marginTop="454dp"
        android:textSize="@dimen/dp_26"
        android:text="11:00"/>

    <TextView
        android:id="@+id/out_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1674dp"
        android:layout_marginTop="454dp"
        android:textSize="@dimen/dp_26"
        android:text="xx:xx"/>

    <View
        android:layout_width="623dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginStart="1216dp"
        android:layout_marginTop="535dp" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1214dp"
        android:layout_marginTop="592dp"
        android:textSize="@dimen/dp_30"
        android:text="@string/subscriber"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="592dp"
        android:textSize="@dimen/dp_30"
        android:text="xx:xx"/>

    <TextView
        android:id="@+id/user_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1214dp"
        android:layout_marginTop="715dp"
        android:textSize="@dimen/dp_30"
        android:text="@string/phone_number"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="130dp"
        android:layout_marginTop="715dp"
        android:textSize="@dimen/dp_30"
        android:text="xx:xx"/>

    <TextView
        android:id="@+id/￥"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="1197dp"
        android:layout_marginTop="895dp"
        android:text="￥"
        android:textSize="@dimen/dp_30" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/￥"
        android:layout_toEndOf="@+id/￥"
        android:text="00.00"
        android:textSize="@dimen/dp_45" />

    <TextView
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignBottom="@+id/￥"
        android:layout_toEndOf="@+id/price"
        android:layout_marginBottom="3dp"
        android:text="元"
        android:textColor="@color/gray"
        android:textSize="@dimen/dp_26" />

    <TextView
        android:id="@+id/reservation"
        android:layout_width="@dimen/dp_300"
        android:layout_height="87dp"
        android:layout_marginStart="1539dp"
        android:layout_marginTop="869dp"
        android:background="@color/reservation"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="@dimen/dp_35"
        />

</RelativeLayout>
