<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/normal_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="@dimen/dp_67"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_42"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_40"
                android:background="@mipmap/back"
                android:gravity="center" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="1056dp"
        android:layout_height="669dp"
        android:layout_marginStart="@dimen/dp_62"
        android:layout_marginTop="201dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout3"
        android:scaleType="fitXY"
        android:src="@mipmap/default_room"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="豪华大床房"
        android:textSize="@dimen/dp_45"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="231dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="318dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_20"
            android:text="￥"/>

        <TextView
            android:id="@+id/price_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="999"
            android:textSize="@dimen/dp_30"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_20"
            android:text="  起"/>
    </LinearLayout>

    <View
        android:layout_width="624dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="404dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_time"
        android:textSize="@dimen/dp_30"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="492dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out_time"
        android:textSize="@dimen/dp_30"
        android:layout_marginStart="1674dp"
        android:layout_marginTop="492dp"/>

    <TextView
        android:id="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:layout_marginStart="1476dp"
        android:textSize="@dimen/dp_26"
        android:textColor="@color/gray"
        android:text="共三晚"
        />

    <TextView
        android:id="@+id/in_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="549dp"
        android:textSize="@dimen/dp_26"
        android:textColor="@color/gray"
        android:text="11:00"/>

    <TextView
        android:id="@+id/out_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1674dp"
        android:layout_marginTop="549dp"
        android:textSize="@dimen/dp_26"
        android:textColor="@color/gray"
        android:text="xx:xx"/>

    <View
        android:layout_width="624dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginStart="1215dp"
        android:layout_marginTop="672dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1203dp"
        android:layout_marginTop="752dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_25"
            android:text="￥"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/dp_45"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_25"
            android:text=" 元"/>
    </LinearLayout>

    <TextView
        android:id="@+id/reservation"
        android:layout_width="@dimen/dp_300"
        android:layout_height="87dp"
        android:layout_marginStart="1539dp"
        android:layout_marginTop="738dp"
        android:background="@drawable/reservation_btn_bg"
        android:text="@string/reservation_now"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="@dimen/dp_35"
        />
</RelativeLayout>
